--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lkt-box",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "type": "module",
   "module": "./dist/lkt-box.js",
@@ -11,11 +11,11 @@
     "./styles": "./dist/style.css"
   },
   "types": "./dist/lkt-box.d.ts",
-  "files": ["dist/*"],
+  "files": ["dist/*", "src/**/*.vue"],
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "build": "vite build && tsc --project tsconfig.json && cp build/style.css dist/style.css"
+    "build": "vite build && vue-tsc --emitDeclarationOnly --project tsconfig.json && cp build/style.css dist/style.css"
   },
   "author": "Antonio Ibáñez",
   "devDependencies": {
