--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "lkt-box",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "type": "module",
-  "module": "./dist/lkt-box.js",
+  "module": "./dist/build.js",
   "exports": {
     ".": {
-      "import": "./dist/lkt-box.js"
+      "import": "./dist/build.js"
     },
-    "./styles": "./dist/style.css",
-    "./lkt-box": "./src/lib-components/LktBox.vue"
+    "./styles": "./dist/style.css"
   },
-  "types": "./dist/lkt-box.d.ts",
-  "files": ["dist/*", "src/**/*.vue"],
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/*",
+    "src/**/*.vue"
+  ],
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "build": "vite build && vue-tsc --emitDeclarationOnly --project tsconfig.json && cp build/style.css dist/style.css"
+    "build": "rm -rf dist/*; vue-tsc --declaration --emitDeclarationOnly; tsc --project tsconfig.build.json; vite build; cp build/* dist/"
   },
   "author": "Antonio Ibáñez",
   "devDependencies": {
