--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lkt-box",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "",
   "type": "module",
   "module": "./dist/build.js",
@@ -39,6 +39,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "lkt-i18n": "^1.0.4",
     "process": "^0.11.10",
     "sass": "^1.57.1",
     "vue": "^3.2.37"
