--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lkt-box",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "description": "",
   "type": "module",
   "module": "./dist/build.js",
@@ -8,7 +8,7 @@
     ".": {
       "import": "./dist/build.js"
     },
-    "./styles": "./dist/style.css",
+    "./styles": "./dist/build.css",
     "./theme": "./theme/default.css",
     "./theme/default": "./theme/default.css"
   },
@@ -21,27 +21,27 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "build": "rm -rf dist/*; vue-tsc --declaration --emitDeclarationOnly; tsc --project tsconfig.build.json; vite build; cp build/* dist/"
+    "build": "vue-tsc --declaration --emitDeclarationOnly; tsc --project tsconfig.build.json; vite build; cp build/* dist/",
+    "rebuild": "rm -rf dist/*; vue-tsc --declaration --emitDeclarationOnly; tsc --project tsconfig.build.json; vite build; cp build/* dist/"
   },
   "author": "Antonio Ibáñez",
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "@babel/types": "^7.23.6",
     "@types/node": "^20.11.19",
     "@types/rollup": "^0.54.0",
     "@vitejs/plugin-vue": "^5.0.4",
-    "rollup": "^4.9.6",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3",
+    "rollup": "^4.34.8",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.1",
     "vue": "^3.3.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.2.0"
   },
-  "engines": {
-    "node": ">=18"
-  },
-  "dependencies": {
-    "lkt-i18n": "^1.0.4",
-    "process": "^0.11.10",
-    "sass": "^1.57.1",
-    "vue": "^3.2.37"
+  "peerDependencies": {
+    "lkt-i18n": "^1.1.0",
+    "lkt-vue-kernel": "^1.0.47",
+    "vue": "^3.3.0"
   }
 }
